--- a/First_CNN_CIRFAR10.ipynb
+++ b/First_CNN_CIRFAR10.ipynb
@@ -6,7 +6,7 @@
       "name": "First_CNN_CIRFAR10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNs8e6bMxW+eTrc1DNMfCNy",
+      "authorship_tag": "ABX9TyMhdzWwWOcYGjKBI9QCDNTN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -665,7 +665,13 @@
       },
       "source": [
         "The length of the loader will adapt to the batch_size. So if your train dataset has 1000 samples and you use a batch_size of 10, the loader will have the length 100.\n",
-        "Note that the last batch given from your loader can be smaller than the actual batch_size, if the dataset size is not evenly dividable by the batch_size. E.g. for 1001 samples, batch_size of 10, train_loader will have len(train_loader)=101 and the last batch will only contain 1 sample. You can avoid this by setting drop_last=True."
+        "Note that the last batch given from your loader can be smaller than the actual batch_size, if the dataset size is not evenly dividable by the batch_size. E.g. for 1001 samples, batch_size of 10, train_loader will have len(train_loader)=101 and the last batch will only contain 1 sample. You can avoid this by setting drop_last=True.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "https://tomroth.com.au/pytorch-cnn/\n",
+        "https://becominghuman.ai/cifar-10-image-classification-fd2ace47c5e8"
       ]
     },
     {
